--- a/urls/bio.html
+++ b/urls/bio.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="1; url=https://sheiltproject.online/bio">
-    <title>Перенаправление...</title>
+    <title>Перенаправление..</title>
 </head>
 <body>
-    <p>Перенаправление...</p>
+    <p>Перенаправление..</p>
 </body>
 </html>
