--- a/bio.html
+++ b/bio.html
@@ -401,7 +401,7 @@
                 </div>
                 <div class="bio-line">
                     <span class="bio-label">Hobbies:</span>
-                    <span>play games(ddracenetwork, wotblitz(eu), scp:cbm, dota, cscz, csgo, rust legacy, survival simulator), basketball, draw, studying to be a programmer(html,rust,powershell), composer.</span>
+                    <span>play games(ddracenetwork, wotblitz(eu), scp:cbm, dota, cscz, csgo, rust legacy, survival simulator, half-life), basketball, draw, studying to be a programmer(html,css,go,powershell), composer.</span>
                 </div>
             </div>
             
